--- a/update-client/package.json
+++ b/update-client/package.json
@@ -28,7 +28,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.83",
+    "@types/bcryptjs": "^2.4.2",
     "@types/jest": "^27.0.2",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^16.9.6",
     "@types/validator": "^13.7.1",
     "aws-sdk-client-mock": "^0.5.6",
@@ -42,7 +44,9 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.5",
